<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_console"
        android:icon="@drawable/ic_console_black_24dp"
        android:title="@string/console" />

    <item
        android:id="@+id/navigation_rawmode"
        android:icon="@drawable/ic_rawmode_black_24dp"
        android:title="@string/raw_mode" />

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_overview_black_24dp"
        android:title="@string/overview" />

    <item
        android:id="@+id/navigation_packetmode"
        android:icon="@drawable/ic_packetmode_black_24dp"
        android:title="@string/packet_mode" />

    <item
        android:id="@+id/navigation_flash"
        android:icon="@drawable/ic_flash_black_24dp"
        android:title="@string/flash" />







    <!--
    <item
        android:id="@+id/navigation_flash"
        android:icon="@drawable/ic_flash_black_24dp"
        android:title="@string/title_notifications" />  -->



</menu>