<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.console.ConsoleFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/jsCodeInput"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:fontFamily="monospace"
                android:gravity="start|top"
                android:inputType="textMultiLine|textNoSuggestions"
                android:minWidth="500dp"
                android:padding="16dp"
                android:scrollHorizontally="true"
                android:text=""
                android:textSize="10sp" />

        </HorizontalScrollView>
    </ScrollView>

    <Spinner
        android:id="@+id/spinnerFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/executeScriptButton" />

    <EditText
        android:id="@+id/editTextNewFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new file name"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRename" />

    <Button
        android:id="@+id/buttonRename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rename File"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewFileName" />


    <Button
        android:id="@+id/executeScriptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Execute Script"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <!-- Connect Button at the top -->
    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerFiles"/>

    <!-- Clear Button at the top -->

    <!-- Serial Output TextView -->
    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@id/spinnerFiles" />

    <CheckBox
        android:id="@+id/filterCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="filter"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/spinnerFiles"/>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/terminalTextInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectButton">

        <TextView
            android:id="@+id/terminalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textColor="@color/blue_lighter" />
    </ScrollView>


    <!-- User Input EditText -->
    <EditText
        android:id="@+id/terminalTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EEE"
        android:hint="@string/enter_command"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>